Fix mobile training video spacing

--- a/common/static/common/styles/studio/_training.scss
+++ b/common/static/common/styles/studio/_training.scss
@@ -27,7 +27,7 @@
   .video-player,
   .content-locked {
     @include media-breakpoint-down(sm) {
-      margin: -20px -20px 0;
+      margin: #{-$spacer / 2} #{-$spacer} 0;
       border-radius: 0;
 
       .plyr__poster {
